<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon_cost_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/cost_of_Service"
            app:layout_constraintEnd_toStartOf="@+id/cost_of_Service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cost_of_Service"
            app:srcCompat="@drawable/ic_cost_service" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cost_of_Service"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:autofillHints="false"
            android:hint="@string/cost_of_service"
            android:maxWidth="200dp"
            android:minWidth="100dp"
            app:endIconMode="clear_text"
            app:expandedHintEnabled="false"
            app:layout_constraintStart_toEndOf="@+id/icon_cost_service"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cost_of_service_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_how_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintTop_toTopOf="@+id/service_question"
            app:layout_constraintBottom_toBottomOf="@+id/service_question"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_how_service" />

        <TextView
            style="@style/Widget.matip.TextView"
            android:id="@+id/service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginStart="16dp"
            android:text="@string/how_was_the_service"
            app:layout_constraintStart_toEndOf="@id/icon_cost_service"
            app:layout_constraintTop_toBottomOf="@+id/cost_of_Service" />

        <RadioGroup
            android:id="@+id/tip_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/percent_option_10"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/service_question"
            app:layout_constraintTop_toBottomOf="@+id/service_question">

            <RadioButton
                android:id="@+id/percent_option_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazing_20"
                android:textSize="11sp" />

            <RadioButton
                android:id="@+id/percent_option_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_15"
                android:textSize="11sp" />

            <RadioButton
                android:id="@+id/percent_option_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/okay_10"
                android:textSize="11sp" />

            <RadioButton
                android:id="@+id/percent_option_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terrible_0"
                android:textSize="11sp" />
        </RadioGroup>

        <ImageView
            android:id="@+id/icon_round_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/round_up_switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/round_up_switch"
            app:srcCompat="@drawable/ic_round_up" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/round_up_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:checked="true"
            android:text="@string/round_up_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_round_up"
            app:layout_constraintTop_toBottomOf="@+id/tip_options" />

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/calculate"
            android:textAllCaps="true"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/round_up_switch"
            app:layout_constraintTop_toBottomOf="@+id/round_up_switch" />

        <TextView
            style="@style/Widget.matip.TextView"
            android:id="@+id/tip_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginTop="14dp"
            tools:text="Tip: $0.00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculate_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>